--- a/index.html
+++ b/index.html
@@ -259,22 +259,22 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="row justify-content-center">
-                        <img src="./Assets/images/New folder/RK.jpg" class="d-block slide-my-porto col-5" alt="...">
-                        <img src="./Assets/images/New folder/trooper.jpg" class="d-block slide-my-porto col-5" alt="...">
+                        <img src="./Assets/images/New folder/RK.jpg" class="d-block slide-my-porto col-5" alt="broken">
+                        <img src="./Assets/images/New folder/trooper.jpg" class="d-block slide-my-porto col-5" alt="broken">
                     </div>
                 </div>
         
                 <div class="carousel-item">
                     <div class="row justify-content-center">
-                        <img src="./Assets/images/New folder/_MG_0273.JPG" class="d-block slide-my-porto col-5" alt="...">
-                        <img src="./Assets/images/New folder/_MG_0297.JPG" class="d-block slide-my-porto col-5" alt="...">
+                        <img src="./Assets/images/New folder/_MG_0273.JPG" class="d-block slide-my-porto col-5" alt="broken">
+                        <img src="./Assets/images/New folder/_MG_0297.JPG" class="d-block slide-my-porto col-5" alt="broken">
                     </div>
                 </div>
         
                 <div class="carousel-item">
                     <div class="row justify-content-center">
-                        <img src="./Assets/images/New folder/_MG_0695.JPG" class="d-block slide-my-porto col-5" alt="...">
-                        <img src="./Assets/images/New folder/_MG_9525.jpg" class="d-block slide-my-porto col-5" alt="...">
+                        <img src="./Assets/images/New folder/_MG_0695.JPG" class="d-block slide-my-porto col-5" alt="broken">
+                        <img src="./Assets/images/New folder/_MG_9525.jpg" class="d-block slide-my-porto col-5" alt="broken">
                     </div>
                 </div>
             </div>
