--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta property="og:image" content="./docs/personal.png">
     <link itemprop="thumbnailUrl" href="./docs/personal.png"> <span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject"> <link itemprop="url" href="./docs/personal.png"> </span>
     <title>My Personal Web</title>
+    <link rel="image_src" href="./docs/personal.png" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
