--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
         </div>
         <div class="col-6 col-md-3 p-5">
-            <a href="#">
+            <a href="./docs/personal-thumb.png">
                 <img class="my-menu-services" src="./Assets/images/download.png" width="100%" alt="boot strap">
             </a>
             <h3 class="text-center pt-5" >WEB DESIGN</h3>
